<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EducaApp</string>
    <string name="title_activity_menu_inicial">EducaApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scroll">ScrollActivity</string>
    <string name="title_section1">Como suspeitar de alguma condição</string>
    <string name="title_section2">Dicas</string>
    <string name="title_section3">Módulos</string>
    <string name="title_activity_fixed_tabs">FixedTabsActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_compose">compose</string>
    <string name="action_search">procurar</string>
    <string name="action_exit">Sair</string>
    <string name="action_help">Ajuda</string>
    <string name="title_activity_modulos">Módulos</string>
    <string name="title_activity_op_modulos">OpModulosActivity</string>
    <string name="title_activity_modulo">Módulo</string>
    <string name="title_video_list">Videos</string>
    <string name="title_video_detail">Video Detail</string>
    <string name="title_activity_video">Vídeo</string>
    <string name="title_activity_artigo">ArtigoActivity</string>
    <string name="title_activity_forum">Fórum</string>
    <string name="title_activity_avaliacao">Avaliação módulo </string>
    <string name="app_name_login">Educa App</string>
    <string name="modulo_autismo_text">Módulo Autismo</string>
    <string name="modulo_del_text">Módulo DEL</string>
    <string name="modulo_dislexia_text">Módulo Dislexia</string>
    <string name="modulo_tdah_text">Módulo TDAH</string>
    <string name="suspeita_autismo_text">Autismo</string>
    <string name="suspeita_del_text">DEL</string>
    <string name="suspeita_dislexia_text">Dislexia</string>
    <string name="suspeita_tdah_text">TDAH</string>
    <string name="titulo_especialista">Gabriel Torres \n Psicólogo</string>
    <string name="texto_descritivo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="videos_text">5 Vídeos</string>
    <string name="artigos_text">3 Artigos</string>
    <string name="testes_text">2 Testes</string>
    <string name="title_activity_quest_tdah_hiper">Questionário TDAH e Hiperatividade</string>
    <string name="lbBtQuestionario">Submeter questionário</string>
    <string name="title_quest_tdah_hiper">"Como desconfiar de Transtorno de Déficit de Atenção/Hiperatividade "</string>
    <string name="title_activity_quest_autismo">Questinário Autismo</string>
    <string name="title_quest_autismo">Como desconfiar de Transtorno Autista </string>
    <string name="title_quest_dislexia">Como desconfiar de Dislexia</string>
    <string name="title_activity_quest_dislexia">Questinário Dislexia</string>
    <string name="title_activity_quest_del">Questinário DEL</string>
    <string name="title_quest_del">Como desconfiar de DEL</string>
    <string name="title_activity_menu_suspeitar">Como suspeitar de alguma condição</string>
    <string name="lbBtAvaliacao">Submeter avaliação</string>
    <string name="title_Avaliacao">Marque as respostas verdadeiras</string>
    <string name="txtReprovado">Reprovado</string>
    <string name="txtAprovado">Aprovado</string>
    <string name="title_activity_tipicos_forum_list">TipicosForumListActivity</string>
    <string name="lbForum">Fórum</string>
    <string name="title_activity_discucao_list">DiscucaoListActivity</string>
    <string name="thumbnail">image of a teacher</string>
    <string name="childImage">Image of a child</string>
    <string name="dicas">Tips for the educator</string>
    <string name="suspeitar">questionnaire for the educator to suspect a condiiton</string>
    <string name="modulos">modules of each disease</string>

</resources>
