
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:gravity="center"
    tools:context=".MenuModulosActivity" >

	    <TableLayout
	        android:id="@+id/btModulo1"
	        android:layout_width="@dimen/modulos_table_width"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="40dp"
	        android:background="@color/Snow"
	        android:onClick="onClick"
	        android:orientation="horizontal" >

	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top" >

	            <ImageView
	                android:id="@+id/delImage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/dislexia" />

	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:layout_margin="3dp"
	                android:background="@color/DarkSlateGray"
	                android:text="@string/suspeita_del_text"
	                android:textColor="@color/White"
	                android:textSize="25sp" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/Ivory2" >

	            <ImageView
	                android:id="@+id/thumbnail"
	                android:layout_width="0px"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.2"
	                android:gravity="left"
	                 />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>

	    <TableLayout
	        android:id="@+id/btModulo2"
	        android:layout_width="@dimen/modulos_table_width"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/btModulo1"
	        android:layout_marginLeft="250dp"
	        android:background="@color/Snow"
	        android:onClick="onClick"
	        android:orientation="horizontal" >

	        <TableRow
	            android:id="@+id/tableRow6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top" >

	            <ImageView
	                android:id="@+id/autismoImage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/dislexia" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:layout_margin="3dp"
	                android:background="@color/DarkSlateGray"
	                android:text="@string/suspeita_autismo_text"
	                android:textColor="@color/White"
	                android:textSize="25sp" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow8"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/Ivory2" >

	            <ImageView
	                android:id="@+id/thumbnail2"
	                android:layout_width="0px"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.2"
	                android:gravity="left"
	                 />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow10"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>

	    <TableLayout
	        android:id="@+id/btModulo3"
	        android:layout_width="@dimen/modulos_table_width"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/btModulo1"
	        android:layout_marginLeft="490dp"
	        android:background="@color/Snow"
	        android:onClick="onClick"
	        android:orientation="horizontal" >

	        <TableRow
	            android:id="@+id/tableRow11"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top" >

	            <ImageView
	                android:id="@+id/dislexiaImage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/dislexia" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow12"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:layout_margin="3dp"
	                android:background="@color/DarkSlateGray"
	                android:text="@string/suspeita_dislexia_text"
	                android:textColor="@color/White"
	                android:textSize="25sp" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow14"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow15"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>

	    <TableLayout
	        android:id="@+id/btModulo4"
	        android:layout_width="@dimen/modulos_table_width"
	        android:layout_height="wrap_content"
	       
	        android:layout_alignTop="@+id/btModulo3"
	        android:layout_marginLeft="730dp"
	       
	        android:background="@color/Snow"
	        android:onClick="onClick"
	        android:orientation="horizontal" >

	        <TableRow
	            android:id="@+id/tableRow16"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top" >

	            <ImageView
	                android:id="@+id/tdahImage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/dislexia" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow17"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:layout_margin="3dp"
	                android:background="@color/DarkSlateGray"
	                android:text="@string/suspeita_tdah_text"
	                android:textColor="@color/White"
	                android:textSize="25sp" />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow18"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/Ivory2" >

	            <ImageView
	                android:id="@+id/thumbnail4"
	                android:layout_width="0px"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.2"
	                android:gravity="left"
	                 />
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow20"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>

</RelativeLayout>

